# vvb

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.gradle  build.rs  gradle.properties  keystore.properties  settings.gradle
.cargo/: audit.toml
app/: .gitignore  build.gradle
app/src/leia/: AndroidManifest.xml
app/src/leia/res/layout/: wrapper_surface_view_adapter.xml
app/src/leia/res/raw/: bundledgames.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/games/: BLOX 2.vb  BLOX.vb  Fishbone.vb  Red Square.vb  The Red Castle.vb  VUE Snake.vb  VUEngine Platformer Demo.vb
app/src/main/res/: strings.xml
app/src/main/res/color/: vb_red.xml
app/src/main/res/drawable/: ic_arrow_down_24.xml  ic_button.xml  ic_dpad_arrow.xml  ic_dpad_center.xml
app/src/main/res/drawable-v21/: rippleable.xml
app/src/main/res/layout/: about_view.xml  activity_game.xml  activity_main.xml  dpad.xml  game_view.xml  gamepad_view.xml  main_activity.xml  menu_item.xml  text_box.xml  view_game.xml  wrapper_surface_view_adapter.xml
app/src/main/res/layout-port/: game_view.xml
app/src/main/res/menu/: settings_menu.xml
app/src/main/res/raw/: bundledgames.json
app/src/main/res/values-de/: strings.xml
cardboard-sdk/: sdk-release.aar
gradle/wrapper/: gradle-wrapper.properties
leia-cnsdk/: build.gradle
src/: audio.rs  controller.rs  jni_helpers.rs  lib.rs  renderer.rs  video.rs
src/audio/: noop.rs  oboe.rs
src/audio/oboe/: manager.rs  stream_manager.rs
src/emulator/: audio.rs  cpu.rs  hardware.rs  main.rs  memory.rs  mod.rs  state.rs  storage.rs  video.rs
src/emulator/video/: buffer.rs  drawing.rs
src/jni_helpers/: java_binding.rs
src/renderer/: cardboard_api.rs  gl_bindings.rs  mod.rs  screen.rs
src/renderer/cardboard/: api.rs  mod.rs
src/renderer/gl/: gl_bindings.rs  mod.rs  utils.rs
src/video/: cardboard.rs  gl.rs  renderers.rs  screen.rs
src/video/cardboard/: mod.rs
src/video/gl/: utils.rs
src/video/renderers/: anaglyph.rs  cardboard.rs  cnsdk.rs  common.rs  gl.rs  leia.rs  mono.rs  stereo.rs
src/video/renderers/cardboard/: display.rs  distortion_wrapper.rs
src/video/renderers/gl/: aspect_ratio.rs  program.rs  textures.rs  utils.rs
(+161 files in other folders)
