[package]
name = "vvb"
version = "0.1.0"
authors = ["Simon Gellis <simongellis@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
android_logger = "0.10.1"
anyhow = "1.0.43"
cgmath = "0.18.0"
jni = "0.19.0"
log = "0.4.14"
num-traits = "0.2.14"
paste = "1.0.5"
ringbuf = "0.2.6"

[target.'cfg(target_os = "android")'.dependencies]
oboe = "0.4.4"
oboe-sys = "0.4.4"

[build-dependencies]
gl_generator = "0.14.0"

[lib]
name = "vvb"
doctest = false
crate-type = ["rlib", "dylib"]

[[bin]]
name = "perftest"
test = false
path = "src/emulator/main.rs"

[profile.release]
debug = true
