[package]
name = "vvb"
version = "0.1.0"
authors = ["Simon Gellis <simongellis@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
android_logger = "0.13.1"
anyhow = "1.0.43"
array-init = "2.0.0"
ciborium = "0.2.0"
cgmath = "0.18.0"
jni = "0.21.1"
log = { version = "0.4.14", features = ["max_level_info"] }
num-traits = "0.2.14"
paste = "1.0.5"
ringbuf = "0.3.1"
serde = "1.0.130"
serde_bytes = "0.11.5"
serde_derive = "1.0.130"

[target.'cfg(target_os = "android")'.dependencies]
oboe = "0.5.0"
oboe-sys = "0.5.0"

[build-dependencies]
gl_generator = "0.14.0"

[lib]
name = "vvb"
doctest = false
crate-type = ["rlib", "dylib"]

[[bin]]
name = "perftest"
test = false
path = "src/emulator/main.rs"

[profile.release]
debug = true
panic = 'abort'
