[package]
name = "vvb"
version = "0.1.0"
authors = ["Simon Gellis <simongellis@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
android_logger = "0.15"
anyhow = "1"
array-init = "2"
ciborium = "0.2"
cgmath = "0.18.0"
jni = "0.21.1"
log = { version = "0.4", features = ["max_level_info"] }
num-traits = "0.2.19"
paste = "1.0.15"
ringbuf = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"

[target.'cfg(target_os = "android")'.dependencies]
oboe = "0.6"
oboe-sys = "0.6"

[build-dependencies]
gl_generator = "0.14.0"

[lib]
name = "vvb"
doctest = false
crate-type = ["rlib", "dylib"]

[[bin]]
name = "perftest"
test = false
path = "src/emulator/main.rs"

[profile.release]
debug = true
panic = 'abort'
